--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /Frontend/themes/site/nbproject/private/
+.idea
+/e-com/.idea
 /backend-resi-api/target/
 /backend-rest-api/target
 /Frontend/themes/site/nbproject/private/private.xml
