--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -1,12 +1,20 @@
 # Database
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/modern_ecommerce?useUnicode=true&amp;characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=
+spring.jpa.properties.hibernate.jdbc.batch_size=5
+spring.jpa.properties.hibernate.order_inserts=true
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/oms
+spring.datasource.username=vipulsharma
+spring.datasource.password=password
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.hibernate.ddl-auto=update
+logging.level.com.egen.ordercontroller = TRACE
 
-# Application configurarion
-# Quy configuration upload directory, Please comment if you change
-application.config.upload.basedir = D:/Work/Work_OT/Modern-Ecommerce/backend-rest-api/target/ecommerce-rest-api-1.0.0/upload
+logging.file.name = appLog.log
+logging.pattern.file=%d [%level] %c{1.} {%t} %m%n
+logging.file.path = /home/user/springlogs
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
