--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-
+application.config.upload.basedir=/images
 logging.level.com.egen.ordercontroller = TRACE
 
 logging.file.name = appLog.log
