--- a/backend-rest-api/pom.xml
+++ b/backend-rest-api/pom.xml
@@ -43,6 +43,11 @@
             <version>1.7</version>
         </dependency>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
             <version>4.2.5.RELEASE</version>
