--- a/backend-rest-api/pom.xml
+++ b/backend-rest-api/pom.xml
@@ -54,6 +54,17 @@
             <type>jar</type>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <!-- spring-data-jpa, spring-orm and Hibernate -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -133,9 +144,9 @@
 
         <!-- Send Email lib-->
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.4.RELEASE</version>
         </dependency>
 
         <dependency>
