--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.datasource.username=vipulsharma
 spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 application.config.upload.basedir=/images
 logging.level.com.egen.ordercontroller = TRACE
 
