--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -20,6 +20,5 @@ spring.redis.host=localhost
 spring.redis.port=6379
 redis.ip=localhost
 redis.port=6379
-email.username=vsharma.1634@gmail.com
-email.password=kanjarA1@
-from.email.id=vsharma.1634@gmail.com
+email.username=
+email.password=
