--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ spring.jpa.properties.hibernate.jdbc.batch_size=5
 spring.jpa.properties.hibernate.order_inserts=true
 
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/oms
-spring.datasource.username=vipulsharma
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://lilmunchdb.cwacdounysmk.ap-south-1.rds.amazonaws.com/lilmunchkingdb
+spring.datasource.username=postgres
+spring.datasource.password=qwerty123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
