--- a/backend-rest-api/pom.xml
+++ b/backend-rest-api/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>spring-boot-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.3.9</version>
+        </dependency>
+
         <!-- web development, including Tomcat and spring-webmvc -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
