--- a/backend-rest-api/src/main/resources/application-dev.properties
+++ b/backend-rest-api/src/main/resources/application-dev.properties
@@ -1,11 +1,12 @@
 # Database
 spring.jpa.properties.hibernate.jdbc.batch_size=5
 spring.jpa.properties.hibernate.order_inserts=true
-
+secret.id=rzp_test_afulPc88GlYvfu
+secret.key=FHeWYZMKbBgMIVPSAg2lA2jh
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/oms
-spring.datasource.username=vipulsharma
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://lilmunchdb.cwacdounysmk.ap-south-1.rds.amazonaws.com/lilmunchkingdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
